==> miniwinwm/miniwinwm/MiniWin/hal/ATSAM3X8E/hal_lcd.c <==
#include <asf.h>
#include <stdint.h>
#include <stdbool.h>
#include "app.h"
#include "hal/hal_lcd.h"
#include "hal/hal_delay.h"
#include "miniwin_config.h"
#define LCD_DISPLAY_WIDTH_PIXELS	240							/**< This is the width of the display in pixels irrespective of user specified display rotation */
#define LCD_DISPLAY_HEIGHT_PIXELS	320							/**< This is the height of the display in pixels irrespective of user specified display rotation */

void mw_hal_lcd_init(void)
{    
	gpio_set_pin_low(LCD_RESET_PIN);
    mw_hal_delay_ms(100U);
	gpio_set_pin_high(LCD_RESET_PIN);
    mw_hal_delay_ms(100U);

    spi_set_peripheral_chip_select_value(SPI_LCD_TOUCH_BASE, spi_get_pcs(SPI_LCD_CHIP_SEL));

	write_command(0x01U);
    mw_hal_delay_ms(10U);
	write_command(0xcbU);
	write_data(0x39U);
	write_data(0x2cU);
	write_data(0x00U);
	write_data(0x34U);
	write_data(0x02U);
	write_command(0xcfU);
	write_data(0x00U);
	write_data(0xc1U);
	write_data(0x30U);
	write_command(0xe8U);
	write_data(0x85U);
	write_data(0x00U);
	write_data(0x78U);
	write_command(0xeaU);
	write_data(0x00U);
	write_data(0x00U);
	write_command(0xedU);
	write_data(0x64U);
	write_data(0x03U);
	write_data(0x12U);
	write_data(0x81U);
	write_command(0xf7U);
	write_data(0x20U);
	write_command(0xc0U);
	write_data(0x23U);
	write_command(0xc1U);
	write_data(0x10U);
	write_command(0xc5U);
	write_data(0x3eU);
	write_data(0x28U);
	write_command(0xc7U);
	write_data(0x86U);
	write_command(0x36U);
	write_data(0x48U);
	write_command(0x3aU);
	write_data(0x55U);
	write_command(0xb1U);
	write_data(0x00U);
	write_data(0x18U);
	write_command(0xb6U);
	write_data(0x08U);
	write_data(0x82U);
	write_data(0x27U);
	write_command(0xf2U);
	write_data(0x00U);
	write_command(0x26U);
	write_data(0x01U);
	write_command(0xe0U);
	write_data(0x0fU);
	write_data(0x31U);
	write_data(0x2bU);
	write_data(0x0cU);
	write_data(0x0eU);
	write_data(0x08U);
	write_data(0x4eU);
	write_data(0xf1U);
	write_data(0x37U);
	write_data(0x07U);
	write_data(0x10U);
	write_data(0x03U);
	write_data(0x0eU);
	write_data(0x09U);
	write_data(0x00U);
	write_command(0xe1U);
	write_data(0x00U);
	write_data(0x0eU);
	write_data(0x14U);
	write_data(0x03U);
	write_data(0x11U);
	write_data(0x07U);
	write_data(0x31U);
	write_data(0xc1U);
	write_data(0x48U);
	write_data(0x08U);
	write_data(0x0fU);
	write_data(0x0cU);
	write_data(0x31U);
	write_data(0x36U);
	write_data(0x0fU);
	write_command(0x11U);
    mw_hal_delay_ms(120U);
	write_command(0x29U);
	write_command(0x36U);
	write_data(0x48U);
}

void mw_hal_lcd_colour_bitmap_clip(int16_t image_start_x,
		int16_t image_start_y,
		uint16_t bitmap_width,
		uint16_t bitmap_height,
		int16_t clip_start_x,
		int16_t clip_start_y,
		int16_t clip_width,
		int16_t clip_height,
		const uint8_t *image_data)
{
	int16_t x;
	int16_t y;
	mw_hal_lcd_colour_t pixel_colour;
	uint16_t rgb565_colour;

#if defined(MW_DISPLAY_ROTATION_0)
	/* check if pixels in data buffer are all to be drawn */
	if (image_start_x >= clip_start_x &&
			image_start_y >= clip_start_y &&
			image_start_x + (int16_t)bitmap_width <= clip_start_x + clip_width &&
			image_start_y + (int16_t)bitmap_height <= clip_start_y + clip_height &&
            bitmap_width <= LCD_DISPLAY_WIDTH_PIXELS)
	{
		spi_set_peripheral_chip_select_value(SPI_LCD_TOUCH_BASE, spi_get_pcs(SPI_LCD_CHIP_SEL));
		
		if ((image_start_x != previous_x) || (previous_width != bitmap_width))
		{
			ioport_set_pin_level(LCD_DC_PIN, false);
            spi_send(&window_x_command, sizeof(window_x_command));

            window_x_bounds[1] = (uint8_t)image_start_x;
            window_x_bounds[3] = (uint8_t)(image_start_x + bitmap_width - 1);
			ioport_set_pin_level(LCD_DC_PIN, true);
            spi_send(window_x_bounds, sizeof(window_x_bounds));            

			previous_x = image_start_x;
			previous_width = bitmap_width;
		}		
		
		for (y = 0; y < (int16_t)bitmap_height; y++)
		{
			for (x = 0; x < (int16_t)bitmap_width; x++)
			{
				pixel_colour = *(2 + image_data + (x + y * (int16_t)bitmap_width) * 3);
				pixel_colour <<= 8;
				pixel_colour += *(1 + image_data + (x + y * (int16_t)bitmap_width) * 3);
				pixel_colour <<= 8;
				pixel_colour += *(image_data + (x + y * (int16_t)bitmap_width) * 3);
				
				rgb565_colour = (uint16_t)((((uint32_t)pixel_colour & 0x00f80000UL) >> 8) |
							(((uint32_t)pixel_colour & 0x0000fc00UL) >> 5) |
							(((uint32_t)pixel_colour & 0x000000f8UL) >> 3));
				
				line_buffer[x] = __builtin_bswap16(rgb565_colour);
			}
			
 			ioport_set_pin_level(LCD_DC_PIN, false);
           spi_send(&window_y_command, sizeof(window_y_command));

            window_y_bounds[0] = (uint8_t)((image_start_y + y) >> 8);
            window_y_bounds[1] = (uint8_t)(image_start_y + y);
            window_y_bounds[2] = (uint8_t)((image_start_y + y) >> 8);
            window_y_bounds[3] = (uint8_t)(image_start_y + y);
			ioport_set_pin_level(LCD_DC_PIN, true);
            spi_send(window_y_bounds, sizeof(window_y_bounds));

			ioport_set_pin_level(LCD_DC_PIN, false);
            spi_send(&pixel_data_command, sizeof(pixel_data_command));

			ioport_set_pin_level(LCD_DC_PIN, true);
            spi_send((uint8_t *)line_buffer, (size_t)(bitmap_width * 2U));       
		}
		
		previous_y = image_start_y + y - 1;
		
		return;
	}
#endif	

	for (y = 0; y < (int16_t)bitmap_height; y++)
	{
		for (x = 0; x < (int16_t)bitmap_width; x++)
		{
			if (x + image_start_x >= clip_start_x &&
					x + image_start_x < clip_start_x + clip_width &&
					y + image_start_y >= clip_start_y &&
					y + image_start_y < clip_start_y + clip_height)
			{
				pixel_colour = *(2 + image_data + (x + y * (int16_t)bitmap_width) * 3);
				pixel_colour <<= 8;
				pixel_colour += *(1 + image_data + (x + y * (int16_t)bitmap_width) * 3);
				pixel_colour <<= 8;
				pixel_colour += *(image_data + (x + y * (int16_t)bitmap_width) * 3);
				mw_hal_lcd_pixel(x + image_start_x, y + image_start_y, pixel_colour);
			}
		}
	}
}
